<resources>
    <string name="app_name">Layout Project</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="txt1">This is my Layout Project</string>
    <string name="checkBox1">Check Box 1</string>
    <string name="checkBox2">Check Box 2</string>
    <string name="checkBox3">Check Box 3</string>
    <string name="checkBox4">Check Box 4</string>
    <string name="checkBox5">Check Box 5</string>
    <string name="checkBox6">Check Box 6</string>
    <string name="sfContentDescription">picture of a smiley face</string>
</resources>